# better-chess-bot

./: .gitignore  CMakeLists.txt  README.md  better chess bot.sln  validation_output.txt
.github/workflows/: cmake.yml  msbuild.yml
Source/: BetterChessBot.vcxproj  BetterChessBot.vcxproj.filters  Bitboard.cpp  Bitboard.h  Evaluation.cpp  EvaluationStructure.h  FenUtility.cpp  FenUtility.h  Game.h  GameState.h  Main.cpp  Move.cpp  Move.h  MoveEncoding.h  MoveGenerator.cpp  MoveGenerator.h  MoveTables.cpp  MoveTables.h  Perft.cpp  Perft.h  PerftStats.h  Player.h  Position.cpp  Position.h  Replay.cpp  Search.cpp  Types.h
Unit Tests/: MoveGenerationTests.cpp  SearchTests.cpp  Unit Tests.cpp  Unit Tests.vcxproj  Unit Tests.vcxproj.filters  UnitTests.cpp  pch.cpp  pch.h
UnitTests/: EvaluationTests.cpp  FenParsingTests.cpp  MoveGenerationTests.cpp  UnitTests.cpp  UnitTests.vcxproj  pch.cpp  pch.h
better chess bot/: Attack detection.cpp  Attack detection.h  Bitboard.cpp  Bitboard.h  Boad operations.cpp  Board generation.cpp  Board generation.h  Board movment.cpp  Board movment.h  Board operation.h  Board operations.h  Board structure.cpp  Board structure.h  Board.cpp  Board.h  BoardConstants.h  Consts.h  Enums.h  Evaluation structure.h  Evaluation.cpp  Evaluation.h  Exceptions.h  Experimental structure.h  Game constants.h  Game innitials.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Magic bit boards.cpp  Magic bit boards.h  Move encoding.h  Move generation.cpp  Move generation.h  Move handling.cpp  Move handling.h  Move search.cpp  Move search.h  Move structure.cpp  Move structure.h  (+25 more)
